k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: engly
  labels:
    name: engly
    app: engly-server
